[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["gustavohvgarcia <gustavo.henrique420@uel.br>"]

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.3.0"
pylint = "^2.13.9"
fastapi = {extras = ["all"], version = "^0.78.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
